kustomizations/observability/overlays/stage/ingress-echo-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-app-stage-ingress-external
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    # File provider: basicAuth.usersFile on PVC (traefik ns); ref my-basic-auth@file
    traefik.ingress.kubernetes.io/router.middlewares: my-basic-auth-stage@file
spec:
  ingressClassName: traefik-argocd
  rules:
    - host: demoapp.sixthnode.external.stage.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 80
